# kshrd_certificate_verification

./: .env  .gitignore  ARCHITECTURE.md  IMPLEMENTATION.md  README.md  TODO.md  pyproject.toml
app/: main.py
app/api/v1/: verify_endpoint.py
app/api/v1/endpoints/: certificate.py  certificate_type.py  me.py  template.py
app/core/: auth.py  config.py  exceptions.py  redis.py
app/db/: database.py
app/models/: __init__.py  certificate.py  certificate_template.py  certificate_type.py  certificate_verification_log.py  curriculum.py  generation.py  user.py
app/schemas/: certificate.py  certificate_template.py  certificate_type.py  curriculum.py  template.py  user.py
app/services/: certificate_service.py  certificate_type_service.py  keycloak_service.py  redis_service.py  template_service.py  user_service.py
app/test/: test_cache.py  test_keycloak_service.py
